--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="new_contact">New</string>
     <string name="new_company">New</string>
     <string name="update_company">Update</string>
+    <string name="schedule_view">Schedule</string>
+    <string name="task_view">Task</string>
+    <string name="info_view">Info</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
