--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="schedule_view">Schedule</string>
     <string name="task_view">Task</string>
     <string name="info_view">Info</string>
+    <string name="meeting_view">Meeting</string>
+    <string name="notes_view">Notes</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
