--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
 <resources>
 
     <string name="app_name">CRM</string>
+    <string name="contacts">Contacts</string>
+    <string name="relationships">Relationships</string>
     <string name="action_lists">Test lists</string>
     <string name="action_board">Test board </string>
     <string name="action_disable_drag">Disable drag</string>
