--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="app_name">CRM</string>
     <string name="contacts">Contacts</string>
     <string name="relationships">Relationships</string>
+    <string name="contacts_list">Import Contact</string>
 
     <string name="create_a_new_contact">Create a new contact</string>
 
@@ -33,6 +34,11 @@
     <string name="task_view">Task</string>
     <string name="meeting_view">Meeting</string>
     <string name="notes_view">Notes</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="app_label">Search</string>
+    <string name="search_hint">Search Me</string>
+    <string name="search">Search</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 
